--- a/EasyChat/Views/Pages/Settings/ResultSettingsView.axaml
+++ b/EasyChat/Views/Pages/Settings/ResultSettingsView.axaml
@@ -35,6 +35,24 @@
             <StackPanel Spacing="15" IsVisible="{Binding ResultConf.ScreenshotResultMode, Converter={x:Static converts:ResultWindowModeToBooleanConverter.Instance}}">
                 <Separator Opacity="0.1" />
 
+                <!-- Read Aloud Setting -->
+                <DockPanel>
+                    <TextBlock Text="{x:Static lang:Resources.ReadAloudMode}"
+                               VerticalAlignment="Center" FontWeight="Bold" />
+                    <ComboBox ItemsSource="{Binding ResultReadAloudModes}"
+                              SelectedItem="{Binding ResultConf.ReadAloudMode}"
+                              HorizontalAlignment="Right" Width="150">
+                        <ComboBox.ItemTemplate>
+                            <DataTemplate>
+                                <TextBlock Text="{Binding Converter={x:Static converts:ResultReadAloudModeConverter.Instance}}" 
+                                           VerticalAlignment="Center" />
+                            </DataTemplate>
+                        </ComboBox.ItemTemplate>
+                    </ComboBox>
+                </DockPanel>
+
+                <Separator Opacity="0.1" />
+
                 <!-- Font Size -->
                 <DockPanel>
                     <TextBlock Text="{x:Static lang:Resources.FontSize}"
