--- a/EasyChat/Views/Pages/Settings/InputSettingsView.axaml
+++ b/EasyChat/Views/Pages/Settings/InputSettingsView.axaml
@@ -6,7 +6,8 @@
              xmlns:suki="https://github.com/kikipoulet/SukiUI"
              xmlns:viewModels="clr-namespace:EasyChat.ViewModels.Pages"
              xmlns:lang="clr-namespace:EasyChat.Lang;assembly=EasyChat"
-             xmlns:converts="clr-namespace:EasyChat.Converters;assembly=EasyChat"
+                          xmlns:converts="clr-namespace:EasyChat.Converters;assembly=EasyChat"
+             xmlns:avalonia="clr-namespace:Material.Icons.Avalonia;assembly=Material.Icons.Avalonia"
              x:DataType="viewModels:SettingViewModel"
              mc:Ignorable="d">
     <UserControl.Resources>
@@ -107,6 +108,24 @@
                                    FormatString="N0" Width="150" />
                     <TextBlock Text="ms" VerticalAlignment="Center" Opacity="0.6" Width="30" />
                 </StackPanel>
+            </DockPanel>
+
+            <Separator Opacity="0.1" />
+
+            <!-- Reverse Translate Language -->
+            <DockPanel>
+                <StackPanel Orientation="Horizontal" Spacing="8">
+                    <TextBlock Text="{x:Static lang:Resources.ReverseTranslateLanguage}"
+                               VerticalAlignment="Center" FontWeight="Bold" />
+                    <Button Classes="Basic" VerticalAlignment="Center"
+                            ToolTip.Tip="{x:Static lang:Resources.ReverseTranslateLanguageTip}">
+                        <avalonia:MaterialIcon Kind="InformationOutline" Width="16" Height="16" 
+                                               Foreground="{DynamicResource SukiLowText}"/>
+                    </Button>
+                </StackPanel>
+                <ToggleSwitch IsChecked="{Binding InputConf.ReverseTranslateLanguage}"
+                              HorizontalAlignment="Right"
+                              OnContent="" OffContent="" />
             </DockPanel>
         </StackPanel>
     </suki:GlassCard>
