--- a/EasyChat/Views/Pages/Settings/GeneralSettingsView.axaml
+++ b/EasyChat/Views/Pages/Settings/GeneralSettingsView.axaml
@@ -46,77 +46,7 @@
                     </ComboBox.ItemTemplate>
                 </ComboBox>
             </StackPanel>
-            <StackPanel Orientation="Horizontal" Spacing="30" Margin="0 5 0 5">
-                <TextBlock FontWeight="Bold" VerticalAlignment="Center"
-                           Text="{x:Static lang:Resources.TransEngine}" />
-                <RadioButton GroupName="A"
-                             IsChecked="{Binding GeneralConf.TransEngine, 
-                             Converter={x:Static converts:EngineTypeToBoolConverters.AiModel}}">
-                    <StackPanel Orientation="Horizontal" Spacing="8">
-                        <avalonia:MaterialIcon Kind="Robot" Width="16" Height="16" />
-                        <TextBlock Text="{x:Static lang:Resources.AIEngine}" VerticalAlignment="Center"/>
-                    </StackPanel>
-                </RadioButton>
-                <RadioButton GroupName="A"
-                             IsChecked="{Binding GeneralConf.TransEngine, 
-                             Converter={x:Static converts:EngineTypeToBoolConverters.MachineTrans}}">
-                    <StackPanel Orientation="Horizontal" Spacing="8">
-                        <avalonia:MaterialIcon Kind="Translate" Width="16" Height="16" />
-                        <TextBlock Text="{x:Static lang:Resources.MachineTranslation}" VerticalAlignment="Center"/>
-                    </StackPanel>
-                </RadioButton>
-            </StackPanel>
-            <StackPanel Orientation="Horizontal" Spacing="30" Margin="0 5 0 5">
-                <TextBlock FontWeight="Bold" VerticalAlignment="Center"
-                           Text="{x:Static lang:Resources.UsingAiModel}" />
-                <ComboBox ItemsSource="{Binding ConfiguredModels}"
-                          SelectedValue="{Binding GeneralConf.UsingAiModelId}"
-                          SelectedValueBinding="{Binding Id}"
-                          MinWidth="150">
-                    <ComboBox.ItemTemplate>
-                        <DataTemplate>
-                            <StackPanel Orientation="Horizontal" Spacing="8">
-                                <Panel Width="20" Height="20">
-                                    <Border ClipToBounds="True" CornerRadius="4"
-                                            IsVisible="{Binding ModelType, Converter={x:Static converts:AiModelTypeConverters.IsNotCustom}}">
-                                        <Image Source="{Binding ModelType, Converter={x:Static converts:AiModelTypeConverters.ToIcon}}"
-                                               Stretch="UniformToFill" />
-                                    </Border>
-                                    <avalonia:MaterialIcon Kind="Robot" Width="20" Height="20"
-                                                           IsVisible="{Binding ModelType, Converter={x:Static converts:AiModelTypeConverters.IsCustom}}" />
-                                </Panel>
-                                <TextBlock Text="{Binding Name}" VerticalAlignment="Center"
-                                           Foreground="{DynamicResource SukiText}" />
-                            </StackPanel>
-                        </DataTemplate>
-                    </ComboBox.ItemTemplate>
-                </ComboBox>
-            </StackPanel>
-            <StackPanel Orientation="Horizontal" Spacing="30" Margin="0 5 0 5">
-                <TextBlock FontWeight="Bold" VerticalAlignment="Center"
-                           Text="{x:Static lang:Resources.UsingMachineTransEngine}" />
-                <ComboBox ItemsSource="{Binding MachineTransProviders}"
-                          SelectedItem="{Binding GeneralConf.UsingMachineTrans}"
-                          MinWidth="150">
-                    <ComboBox.ItemTemplate>
-                        <DataTemplate>
-                            <StackPanel Orientation="Horizontal" Spacing="8">
-                                <Panel Width="20" Height="20">
-                                    <Border ClipToBounds="True" CornerRadius="4"
-                                            IsVisible="{Binding Converter={x:Static converts:EngineConverters.HasIcon}}">
-                                        <Image Source="{Binding Converter={x:Static converts:EngineConverters.ToIcon}}"
-                                               Stretch="UniformToFill" />
-                                    </Border>
-                                    <avalonia:MaterialIcon Kind="Translate" Width="20" Height="20"
-                                                           IsVisible="{Binding Converter={x:Static converts:EngineConverters.HasNoIcon}}" />
-                                </Panel>
-                                <TextBlock Text="{Binding}" VerticalAlignment="Center"
-                                           Foreground="{DynamicResource SukiText}" />
-                            </StackPanel>
-                        </DataTemplate>
-                    </ComboBox.ItemTemplate>
-                </ComboBox>
-            </StackPanel>
+            <!-- Translation settings moved to HomeView -->
             <StackPanel Orientation="Horizontal" Spacing="30" Margin="0 5 0 5">
                 <TextBlock FontWeight="Bold" VerticalAlignment="Center"
                            Text="{x:Static lang:Resources.ProxyUrl}" />
